Added a new api to create an envelope consumer. The new builder can create a consumer to consume events from multiple aletheia topics and multiple data types and allows processing them as DatumEnvelope objects.