@@ -1,22 +1,19 @@
 package com.outbrain.aletheia.datum.consumption.kafka;
 
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.Lists;
-
 import com.outbrain.aletheia.datum.consumption.DatumEnvelopeFetcher;
 import com.outbrain.aletheia.datum.consumption.DatumEnvelopeFetcherFactory;
 import com.outbrain.aletheia.metrics.common.MetricsFactory;
-
 import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.common.serialization.ByteArrayDeserializer;
 import org.apache.kafka.common.serialization.StringDeserializer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 
 /**
@@ -32,16 +29,16 @@ public class KafkaDatumEnvelopeFetcherFactory implements DatumEnvelopeFetcherFac
     final Properties consumerConfig = (Properties) properties.clone();
 
     if (consumerConfig.getProperty("value.deserializer") != null
-        || consumerConfig.getProperty("key.deserializer") != null) {
+            || consumerConfig.getProperty("key.deserializer") != null) {
       logger.warn("serializer cannot be provided as consumer properties. "
-          + "Overriding manually to be the correct serialization type");
+              + "Overriding manually to be the correct serialization type");
     }
     consumerConfig.put("key.deserializer", StringDeserializer.class.getName());
     consumerConfig.put("value.deserializer", ByteArrayDeserializer.class.getName());
 
     if (consumerConfig.getProperty("enable.auto.commit") != null) {
       logger.warn("enable.auto.commit cannot be provided as consumer properties. "
-          + "Please use offset.commit.mode to control offset management mode. see com.outbrain.aletheia.datum.consumption.OffsetCommitMode for supported modes.");
+              + "Please use offset.commit.mode to control offset management mode. see com.outbrain.aletheia.datum.consumption.OffsetCommitMode for supported modes.");
     }
     consumerConfig.put("enable.auto.commit", "false");
 
@@ -55,7 +52,7 @@ public class KafkaDatumEnvelopeFetcherFactory implements DatumEnvelopeFetcherFac
 
   @Override
   public List<DatumEnvelopeFetcher> buildDatumEnvelopeFetcher(final KafkaTopicConsumptionEndPoint consumptionEndPoint,
-      final MetricsFactory metricFactory) {
+                                                              final MetricsFactory metricFactory) {
 
     // Instantiate consumers according to configured concurrency level
     final int numConsumers = consumptionEndPoint.getConcurrencyLevel();
@@ -63,24 +60,17 @@ public class KafkaDatumEnvelopeFetcherFactory implements DatumEnvelopeFetcherFac
 
     for (int i = 0; i < numConsumers; i++) {
       final KafkaConsumer<String, byte[]> consumer = new KafkaConsumer<>(
-          createConsumerConfig( consumptionEndPoint.getBrokers(),
-                                consumptionEndPoint.getGroupId(),
-                                consumptionEndPoint.getProperties()));
+              createConsumerConfig(consumptionEndPoint.getBrokers(),
+                      consumptionEndPoint.getGroupId(),
+                      consumptionEndPoint.getProperties()));
       consumerList.add(consumer);
     }
 
     final Function<KafkaConsumer<String, byte[]>, DatumEnvelopeFetcher> toDatumEnvelopeFetcher =
-        new Function<KafkaConsumer<String, byte[]>, DatumEnvelopeFetcher>() {
-          @Override
-          public DatumEnvelopeFetcher apply(final KafkaConsumer<String, byte[]> consumer) {
-            return new KafkaStreamDatumEnvelopeFetcher( consumer,
-                                                        consumptionEndPoint,
-                                                        metricFactory);
-          }
-        };
+            consumer -> new KafkaStreamDatumEnvelopeFetcher(consumer,
+                    consumptionEndPoint,
+                    metricFactory);
 
-    return FluentIterable.from(consumerList)
-                         .transform(toDatumEnvelopeFetcher)
-                         .toList();
+    return consumerList.stream().map(toDatumEnvelopeFetcher).collect(Collectors.toList());
   }
 }
